#506 Change student registration style.

--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -84,3 +84,9 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.student-button {
+    display: inline-block !important;
+    cursor: pointer !important;
+    border: 1px solid !important;
+}
