--- a/web/themes/custom/girchi/templates/webform/webform--student-registration.html.twig
+++ b/web/themes/custom/girchi/templates/webform/webform--student-registration.html.twig
@@ -118,11 +118,11 @@
         </div>
     </div>
     <div class="text-center font-size-6 ">
-        <a class="text-decoration-none text-success" id="addNewChild">
-            <i class="icon-plus"></i>
+        <a class="text-decoration-none text-success btn btn-lg student-button" id="addNewChild"  >
+            <span class="mr-2">{{ 'Add child' |t }}</span><i class="icon-plus"></i>
         </a>
-        <a class="text-decoration-none text-warning" id="removeLastChild">
-            <i class="icon-delete"></i>
+        <a class="text-decoration-none text-warning btn btn-lg student-button" id="removeLastChild">
+            <span class="mr-2"> {{ 'Remove' }}</span><i class="icon-delete"></i>
         </a>
     </div>
     <div class="text-center">
