--- a/web/themes/custom/girchi/templates/paragraphs/paragraph--school-goal.html.twig
+++ b/web/themes/custom/girchi/templates/paragraphs/paragraph--school-goal.html.twig
@@ -69,6 +69,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content overflow-hidden">
             <div class="modal-header align-items-center px-3 px-md-4">
+               {{ content.field_title }}
                <button aria-label="Close" class="close ml-6" data-dismiss="modal" type="button">
                     <i aria-hidden="true" class="icon-close font-size-3 text-dark-silver"></i>
                </button>
