--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -58,6 +58,9 @@ html {
 .webform-submission-teacher-registration-form input {
   margin: 0 !important;
 }
+.webform-submission-investor-registration-form input {
+  margin: 0 !important;
+}
 
 .article-body .my-3 img {
   max-width: 100%;
@@ -80,4 +83,10 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+.student-button {
+    display: inline-block !important;
+    cursor: pointer !important;
+    border: 1px solid !important;
 }
