#498 Add ged amount field to transactions history.

--- a/web/themes/custom/girchi/templates/views/views-view-table--donations--page-2.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view-table--donations--page-2.html.twig
@@ -108,7 +108,8 @@
                         amount : "font-size-4 font-weight-bold text-nowrap text-dark align-middle",
                         aim_id :  "font-size-1 font-size-md-3 text-grey align-middle text-nowrap",
                         politician_id : "font-size-1 font-size-md-3 text-grey align-middle text-nowrap",
-                        field_donation_type : "font-size-1 font-size-md-3  text-grey align-middle"
+                        field_donation_type : "font-size-1 font-size-md-3  text-grey align-middle",
+                        ged_amount :  "text-success font-size-4 font-weight-bold text-nowrap"
                     }
                     %}
                     {% for field in column.fields %}
