--- a/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
@@ -79,7 +79,7 @@
                             </span>
                 <span
                     class="text-warning font-size-4 font-weight-bold d-block d-md-none"
-                >{{ fields.field_political_ged.content | striptags | ged_long_format }} <i class="icon-ged font-size-3"></i
+                >{{ fields.field_political_ged.content }} <i class="icon-ged font-size-3"></i
                     ></span>
             </h6>
         </div>
