#495 Update styles for politician rating block.

--- a/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
@@ -72,7 +72,7 @@
                     <i class="icon-angle-pointing-to-left"></i>
                 </button>
                 <div
-                    class="rating-of-politicians-carousel-dots owl-dots d-flex align-items-center"
+                    class="rating-of-politicians-carousel-dots owl-dots politicians-raiting-owl d-flex align-items-center"
                 ></div>
                 <button
                     class="rating-of-politicians-carousel-next btn py-3 shadow-none rounded-0 text-dark-silver border-left"
@@ -115,7 +115,7 @@
                                                 <small class="d-block small font-weight-bold"
                                                 >{{ politician.first_name }}</small
                                                 >
-                                                <span class="font-weight-bold">{{ politician.last_name }}</span>
+                                                <span class="font-weight-bold small">{{ politician.last_name }}</span>
                                             </a>
                                             <span
                                                     class="text-light-green font-weight-bold font-size-7 font-size-xl-8  line-height-0-9"
