--- a/web/themes/custom/girchi/templates/nodes/node--article--slider.html.twig
+++ b/web/themes/custom/girchi/templates/nodes/node--article--slider.html.twig
@@ -15,7 +15,7 @@
                                 class="icon-clock-circular-outline mr-1
                         "
                         ></i>
-                       {{ node.getCreatedTime| format_date('article_short') }} </span
+                       {{ content.field_published_date.0 is defined ? content.field_published_date : node.getCreatedTime| format_date('article_short')}} </span
                       >
             <h4
                     class="line-height-1-3 line-height-lg-1-5 font-size-4 font-size-lg-6"
