--- a/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-success.html.twig
@@ -68,12 +68,14 @@
                             >
                                 {{'Profile'|t}}
                             </a>
+                            {% if regular_donation  %}
                             <a
                                     href="{{ path('girchi_donations.regular_donations') }}"
                                     class="btn btn-success text-uppercase btn-block btn-lg my-3 my-lg-4 text-nowrap"
                             >
                                 {{'My regular donations'|t}}
                             </a>
+                            {% endif %}
                             {% if regular_donation is null %}
                             <a
                                     href="{{ path('girchi_donations.donations_controller_index') }}"
