--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -89,8 +89,17 @@
                                             <span class="mr-3">
                                   <span class="text-grey"
                                   >{{ 'Paying date:' | t }} </span
-                                  >{{ regular_donation.payment_day.value }}</span
-                                            >
+                                  >{{ regular_donation.payment_day.value }}
+                                            </span>
+
+                                        </div>
+                                        <div
+                                            class="d-flex font-size-2 font-weight-bold flex-wrap"
+                                        >
+                                       <span class="mr-3">
+                                                <span
+                                                    class="text-grey">{{ 'Next payment date' | t }}: </span>{{ regular_donation.next_payment_date.value }}
+                                            </span>
                                         </div>
                                     </div>
                                     <!-- End left size -->
@@ -290,7 +299,7 @@
                             aria-hidden="true"
                             class="icon-close font-size-3 text-dark-silver"
                         ></i>
-                    </button>   
+                    </button>
                 </div>
                 <div class="modal-body pt-0  pl-3 pr-3 pb-3 pl-md-5 pr-md-5 pb-md-5">
                     <form method="post" action="/donate/edit_donation">
