#444 Change donation edit warning message.

--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -339,7 +339,7 @@
                         </p>
                         <hr class="border-dashed border-secondary"/>
                         <h5 class="font-size-3 font-weight-bold text-warning">
-                            {{ 'The edited verison of Donation will be valid after the next payment.' |t }}
+                            {{ 'The edited verison of Periodicity and date will be valid after the next payment.' |t }}
                         </h5>
                         <div class="d-flex flex-wrap flex-sm-nowrap">
                             <div class="form-group w-100 w-md-50 pr-sm-2">
