Fix string for translation.

--- a/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/regular-donations.html.twig
@@ -358,7 +358,7 @@
                                 />
                             </div>
                             <div class="form-group w-100 w-md-50">
-                                <label class="form-label">{{ 'You will recive' |t }}</label>
+                                <label class="form-label">{{ 'You will get' |t }}</label>
                                 <div class="text-success font-size-5 d-flex pl-3 pt-2">
                                     <i class="icon-ged"></i>
                                     <span class="ml-1 font-weight-bold ged-output-add"
