--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -63,7 +63,7 @@
                         </div>
                         <div class="form-group mb-2">
                             <label class="form-label" for="phone">{{ "Phone number" | t }}</label>
-                            {{ element.field_phone }}
+                            {{ element.field_tel }}
                         </div>
                         <button type="button" class="btn btn-lg btn-block  btn-warning text-uppercase mt-4" data-toggle="modal"
                                 data-target="#drupalUserPublicProfile">
