--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -23,7 +23,7 @@
                              src="{{ avatar ? image_style_url(avatar, 'avatar_image') : theme_path('/images/avatar.png', 1) }}"
                              alt="Avatar" id="avatar-image"/>
                         <button class="position-absolute position-bottom-0 w-100 bg-transparent border-0 overlay-240 font-size-3 py-3 text-uppercase text-white"
-                                id="avatar-trigger" type="button" style="left: 0;">
+                                id="avatar-trigger" type="button">
                             {{ "Change" | t }}
                         </button>
                         <input class="d-none" id="avatar-input" name="avatar" type="file"/>
