--- a/web/themes/custom/girchi/templates/pages/page--user.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--user.html.twig
@@ -98,7 +98,7 @@
                         <div class="text-center mt-n4 position-relative">
                             <a class="btn btn-warning text-uppercase ml-md-auto text-nowrap mt-2 position-relative pl-4" data-target="#profileVideo" data-toggle="modal" href="#">
                                 <i class="icon-play-button font-size-5 position-absolute position-left-8-px position-top-3-px"></i>
-                                <span class="ml-2">{{ "Favorite Video"|t }}</span>
+                                <span class="ml-2">{{ "Learn about politician"|t }}</span>
                             </a>
                         </div>
                         <h6 class="text-uppercase font-weight-bold text-center py-3 mt-1 border-bottom">
