--- a/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view-fields--party-list.html.twig
@@ -79,9 +79,8 @@
                             </span>
                 <span
                     class="text-warning font-size-4 font-weight-bold d-block d-md-none"
-                ><i class="icon-ged font-size-3"></i>
-                    {{ fields.field_political_ged.content | striptags | ged_long_format }}
-                </span>
+                >{{ fields.field_political_ged.content | striptags | ged_long_format }} <i class="icon-ged font-size-3"></i
+                    ></span>
             </h6>
         </div>
     </td>
@@ -190,7 +189,7 @@
     >
                         <span
                             class="text-warning font-size-4 font-size-xl-5 font-weight-bold text-nowrap"
-                        ><i class="icon-ged font-size-4"></i
-                            >{{ ged|ged_long_format }}</span>
+                        >{{ ged|ged_long_format }} <i class="icon-ged font-size-4"></i
+                            ></span>
     </td>
 </tr>
