--- a/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
@@ -54,7 +54,7 @@
                                 class="text-grey line-height-1-2 line-height-xl-1-5"
                         >{{ 'Party list weight' | t }}</span
                         >
-                                    <span class="text-warning text-nowrap">{{ politician.political_ged|ged_long_format  }}</span>
+                                    <span class="text-warning text-nowrap">{{ politician.political_ged }}</span>
                                 </div>
                             </div>
                         </div>
