#532 Fix translation in ged transaction public view.

--- a/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view--ged-transaction--public-page.html.twig
@@ -53,7 +53,7 @@
                 class="d-flex flex-column flex-md-row px-3 px-md-4 py-3 align-items-md-center"
             >
                 <h6 class="text-uppercase font-weight-bold m-0">
-                    გადახდების ისტორია
+                    {{'Transaction history' | t}}
                 </h6>
                 {{ exposed }}
             </div>
