#532 Fix table column spacing.

--- a/web/themes/custom/girchi/templates/views/views-view-table--ged-transaction--public-page.html.twig
+++ b/web/themes/custom/girchi/templates/views/views-view-table--ged-transaction--public-page.html.twig
@@ -94,7 +94,8 @@
                         'text-success',
                         'font-size-4',
                         'font-weight-bold',
-                        'text-nowrap'
+                        'text-nowrap',
+                        'align-middle'
                     ] %}
                     {% for field in column.fields %}
                         {% set column_classes = column_classes|merge(['views-field-' ~ field]) %}
