--- a/web/themes/custom/girchi/templates/nodes/node--article--under-slider.html.twig
+++ b/web/themes/custom/girchi/templates/nodes/node--article--under-slider.html.twig
@@ -9,7 +9,7 @@
                 class="position-absolute position-bottom-0 pb-3 position-left-0 w-100 px-4 z-index-3 overlay-100"
         >
                         <span
-                                class="text-grey mb-2 font-size-1 d-flex align-items-center"
+                                class="text-light-silver mb-2 font-size-1 d-flex align-items-center"
                         >
                           <i
                                   class="icon-clock-circular-outline mr-1
