Fix user edit form.

--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -28,7 +28,7 @@
                         </button>
                         <input class="d-none" id="avatar-input" name="avatar" type="file"/>
                     </div>
-                    <div class="px-0 px-sm-8 pl-xl-0 pr-xl-4 mt-4 my-lg-0">
+                    <div class="px-0 px-sm-4 pr-xl-4 mt-4 my-lg-0">
                         <div class="form-group mb-2">
                             <label class="form-label" for="first-name">{{ "Name" | t }}</label>
                             {{ element.field_first_name }}
@@ -76,7 +76,7 @@
                             <p class="font-size-1 text-grey my-3">
                                 {{ 'You can also use Referral to refer to the person who informed you about us and you decided to register.'|t }}
                             </p>
-                            <div class="form-group mb-2">
+                            <div class="form-group mb-4">
 
 
                                 {{ element.field_referral }}
