#578 Change politican rating block place.

--- a/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
+++ b/web/modules/custom/girchi_my_party_list/templates/politician-rating-block.html.twig
@@ -1,5 +1,5 @@
 <!-- Start of card -->
-<div class="card mb-2 mb-md-4">
+<div class="card mb-2 mb-md-4 mt-3 mt-sm-4">
     <div
         class="card-header font-size-3 text-uppercase font-weight-bold d-flex px-3 px-lg-4"
     >
